[package]
name = "ffiavif"
description = "Encodes images in AVIF format. Pure Rust."
version = "1.0.0"
authors = ["Anders Tornes <anders.tornes@unimicro.no>"]
edition = "2018"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["avif", "png2avif", "jpeg2avif", "convert", "av1"]
categories = ["multimedia::images", "multimedia::encoding"]
homepage = "https://lib.rs/cavif"
repository = "https://github.com/kornelski/cavif-rs"
include = ["README.md", "LICENSE", "Cargo.toml", "/src/*.rs"]

[dependencies]
ravif = { version = "0.8.8", path = "./ravif", default-features = false }
lodepng = "3.4.6"
num_cpus = "1.13.0"
rayon = "1.5.1"
rgb = "0.8.29"
cocoa_image = { version = "1.0.4", optional = true }
imgref = "1.9.1"
jpeg-decoder = "0.1.22"
clap = { version = "2.33.3", default-features = false, features = ["color", "suggestions", "wrap_help"] }
log = "*"

[lib]
name = "ffiavif"
path = "src/lib.rs"
crate-type = ["dylib"]

[features]
default = ["asm"]
asm = ["ravif/asm"]

[profile.dev]
opt-level = 1
debug = 1

[profile.release]
opt-level = 3
debug = false
lto = true

[profile.dev.package."*"]
opt-level = 2

[dev-dependencies]
avif-parse = "0.13.2"
